# trustfall

./: Cargo.toml  out-ed.txt  out2-ed.txt  process.py  tracy.patch
scripts/: algorithm.txt  enum_missing-ed.ptrace.txt  enum_missing.ptrace.txt  enum_missing.ron  function_missing.ptrace.txt  visualise.py  visualise_intos.py  visualise_ptrace.py  visualise_ptraces.ipynb
trustfall_core/src/interpreter/: mod.rs  ptrace.rs  replay.rs  trace.rs
trustfall_testbin/: Cargo.toml
trustfall_testbin/src/: main.rs
