[package]
publish = false
name = "trustfall_testbin"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-graphql-parser = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
trustfall_core = { path = "../trustfall_core", features = ["__private"] }
trustfall-rustdoc-adapter = { version = "45.0.1" }
trustfall_rustdoc = { version = "0.23.1" }
serde_json = "1.0"